tests/baselines/reference/assignmentCompat1.errors.txt
tests/cases/compiler/assignmentCompat1.ts(4,1): error TS2322: Type '{ [index: string]: any; }' is not assignable to type '{ one: number; }'.
  Property 'one' is missing in type '{ [index: string]: any; }'.
tests/cases/compiler/assignmentCompat1.ts(6,1): error TS2322: Type '{ [index: number]: any; }' is not assignable to type '{ one: number; }'.
  Property 'one' is missing in type '{ [index: number]: any; }'.
tests/cases/compiler/assignmentCompat1.ts(8,1): error TS2322: Type '"foo"' is not assignable to type '{ [index: string]: any; }'.
tests/cases/compiler/assignmentCompat1.ts(10,1): error TS2322: Type 'false' is not assignable to type '{ [index: number]: any; }'.


==== tests/cases/compiler/assignmentCompat1.ts (4 errors) ====
    var x = { one: 1 };
    var y: { [index: string]: any };
    var z: { [index: number]: any };
    x = y;  // Error
    ~
!!! error TS2322: Type '{ [index: string]: any; }' is not assignable to type '{ one: number; }'.
!!! error TS2322:   Property 'one' is missing in type '{ [index: string]: any; }'.
    y = x;  // Ok because index signature type is any
    x = z;  // Error
    ~
!!! error TS2322: Type '{ [index: number]: any; }' is not assignable to type '{ one: number; }'.
!!! error TS2322:   Property 'one' is missing in type '{ [index: number]: any; }'.
    z = x;  // Ok because index signature type is any
    y = "foo"; // Error
    ~
!!! error TS2322: Type '"foo"' is not assignable to type '{ [index: string]: any; }'.
    z = "foo"; // OK, string has numeric indexer
    z = false; // Error
    ~
!!! error TS2322: Type 'false' is not assignable to type '{ [index: number]: any; }'.
    
    